Fix image paths

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="header">
     <div class="container">
       <nav>
-  <img src="/images/logo.jpg" class="logo" alt="Santhosh Logo" />
+  <img src="images/logo.jpg" class="logo" alt="Santhosh Logo" />
 
   <!-- Hamburger Menu Icon -->
   <div id="menu-toggle" class="menu-toggle" onclick="toggleMenu()">
@@ -48,7 +48,7 @@
 <div id="about">
   <div class="container about-container">
     <div class="about-col-1">
-      <img src="/images/img_about.jpg" alt="Profile Image" class="about-img" />
+      <img src="images/img_about.jpg" alt="Profile Image" class="about-img" />
     </div>
     <div class="about-col-2">
       <h1 class="sub-title">About Me</h1>
@@ -121,7 +121,7 @@
       <h1 class="sub-title">My Work</h1>
       <div class="work-list">
         <div class="work">
-          <img src="/images/img_1.jpg" alt="Bus Booking System">
+          <img src="images/img_1.jpg" alt="Bus Booking System">
           <div class="layer">
             <h3>Bus Booking Management System</h3>
             <p>Developed by using Core Java and JDBC.</p>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="work">
-          <img src="/images/img_2.jpg" alt="To Do List App">
+          <img src="images/img_2.jpg" alt="To Do List App">
           <div class="layer">
             <h3>To Do List | Web App</h3>
             <p>Developed by using HTML, CSS, and JavaScript.</p>
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div class="work">
-          <img src="/images/img_3.jpg" alt="Portfolio Website">
+          <img src="images/img_3.jpg" alt="Portfolio Website">
           <div class="layer">
             <h3>Personal Portfolio Website</h3>
             <p>Developed by using HTML5, CSS3, and JavaScript.</p>
