Fix image paths

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <div id="header">
     <div class="container">
       <nav>
-  <img src="images/logo.jpg" class="logo" alt="Santhosh Logo" />
+<h1>
+  <span style="color: #ff004f; font-size: 1.5em; font-weight: bold;">S</span>anthosh.
+</h1>
+
+
 
   <!-- Hamburger Menu Icon -->
   <div id="menu-toggle" class="menu-toggle" onclick="toggleMenu()">
@@ -78,9 +82,9 @@
 
       <div class="tab-contents fade-in" id="education">
         <ul>
-          <li><span>B.Sc. Computer Science</span><br>A.M. Jain College, 2021–2024 — CGPA: 6.93</li>
-          <li><span>HSC</span><br>WTMM Hr. Sec. School, 2020–2021 — CGPA: 8.21</li>
-          <li><span>SSLC</span><br>Govt Hr. Sec. School, 2018–2019 — CGPA: 7.14</li>
+          <li><span>B.Sc. Computer Science</span><br>A.M Jain College, Chennai <br> (2021–2024) — CGPA: 6.93</li>
+          <li><span>HSC</span><br>WTMM Hr. Sec. School, Kanchipuram <br> (2020–2021) — CGPA: 8.21</li>
+          <li><span>SSLC</span><br>Govt Hr. Sec. School, Kanchipuram <br> (2018–2019) — CGPA: 7.14</li>
         </ul>
       </div>
     </div>
@@ -103,7 +107,7 @@
           <i class="fa-solid fa-code"></i>
           <h2>Front End Developer</h2>
           <p>Creating user-friendly UI/UX with modern technologies.</p>
-          <a href="https://github.com/santhosh-07-sandy/TO-DO-LIST">Learn more</a>
+          <a href="https://github.com/santhosh-07-sandy/Restaurant-Website">Learn more</a>
         </div>
         <div>
           <i class="fa-brands fa-java"></i>
@@ -121,19 +125,19 @@
       <h1 class="sub-title">My Work</h1>
       <div class="work-list">
         <div class="work">
-          <img src="images/img_1.jpg" alt="Bus Booking System">
+          <img src="images/img_1.jpg" alt="Employee Management System">
           <div class="layer">
-            <h3>Bus Booking Management System</h3>
-            <p>Developed by using Core Java and JDBC.</p>
-            <a href="https://github.com/santhosh-07-sandy/Bus-Booking-Management-System"><i class="fa-solid fa-up-right-from-square"></i></a>
+           <h3>Restaurant Website</h3>
+            <p>Developed by using HTML5, CSS3, and JavaScript.</p>
+            <a href="https://santhosh-07-sandy.github.io/Restaurant-Website/"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
-          <img src="images/img_2.jpg" alt="To Do List App">
+          <img src="images/img_2.jpg" alt="Bus Booking System">
           <div class="layer">
-            <h3>To Do List | Web App</h3>
-            <p>Developed by using HTML, CSS, and JavaScript.</p>
-            <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+           <h3>Bus Booking Management System</h3>
+            <p>Developed by using Core Java and JDBC.</p>
+            <a href="https://github.com/santhosh-07-sandy/Bus-Booking-Management-System"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
@@ -155,14 +159,14 @@
       <div class="row">
         <div class="contact-left">
           <h1 class="sub-title">Contact Me</h1>
-          <p><i class="fa-solid fa-envelope"></i> santhosh1917sant@gmail.com</p>
+          <p><i class="fa-solid fa-envelope"></i> santhosh1917santo@gmail.com</p>
           <p><i class="fa-solid fa-phone"></i> 9751326917</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/santhosh2k3/"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/santhosh-07-sandy"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.hackerrank.com/profile/santhosh_07"><i class="fa-brands fa-hackerrank"></i></a>
           </div>
-          <a href="My_CV.pdf" download class="btn btn2">Download CV</a>
+          <a href="Resume_Santhosh_D_Java_FullStack_Developer_BSC_C_S_2024.pdf" download class="btn btn2">Download CV</a>
         </div>
         <div class="contact-right">
           <form name="submit-to-google-sheet">
