Updated portfolio project with latest changes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <a href="https://github.com/santhosh-07-sandy"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.hackerrank.com/profile/santhosh_07"><i class="fa-brands fa-hackerrank"></i></a>
           </div>
-          <a href="Resume_Santhosh_D_Java_FullStack_Developer_BSC_2024.pdf" download class="btn btn2">Download CV</a>
+          <a href="Resume_Santhosh_D_Java_FullStack_Developer_BSC_CS_2024 (1).pdf" download class="btn btn2">Download CV</a>
         </div>
         <div class="contact-right">
           <form name="submit-to-google-sheet">
