Updated portfolio project with latest changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <nav>
 <h1>
-  <span style="color: #ff004f; font-size: 1.5em; font-weight: bold;">S</span>anthosh.
+  <span style="color: #ff004f; font-size: 1.5em; font-weight: bold;">P</span>ortfolio.
 </h1>
 
 
