Update certifications: add Besant, Edu Tantur, TCS iON

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
       <div class="tab-contents fade-in" id="certifications">
         <ul>
-          <li><span>Java Full Stack – Besant Technologies</span><br>Certified in Java, Spring Boot, REST API</li>
-          <li><span>JavaScript Essentials – Cisco</span><br>Certified in JavaScript fundamentals & DOM</li>
-          <li><span>Intern – Forage Web Dev Program</span><br>Simulated backend & form handling projects</li>
+          <li><span>Java Full Stack Developer — Besant Technologies</span><br>Comprehensive training in Java, Spring Boot, REST APIs, and full‑stack project development.</li>
+          <li><span>Full Stack Web Development Intern — Edu Tantur</span><br>Hands-on internship covering front-end and back-end development.</li>
+          <li><span>TCS iON Career Edge — Young Professional</span><br>Professional readiness and employability certification.</li>
         </ul>
       </div>
 
