Update HTML title to professional headline

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Santhosh.D Portfolio</title>
+  <title>Santhosh D — Java Full Stack Developer | Spring Boot • MySQL • React Js</title>
   <link rel="icon" type="image/jpg" href="images/fav.png">
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/3143154987.js" crossorigin="anonymous"></script>
