--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div id="portfolio">
     <div class="container">
       <h1 class="sub-title">My Work</h1>
-      <div class="work-list"></div>
+      <div class="work-list">
         <!-- QuickGPT - AI Chat Application -->
         <div class="work">
           <img src="images/img_0.jpg" alt="QuickGPT AI Application">
