new project add

--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
             <a href="https://github.com/santhosh-07-sandy/Bus-Booking-Management-System"><i class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
+
+        <!-- Memory Game Project -->
+        <div class="work hidden-project">
+          <img src="images/img_5.jpg" alt="Memory Game">
+          <div class="layer">
+            <h3>Memory Game</h3>
+            <p>Interactive browser-based memory game developed using HTML, CSS, and JavaScript.</p>
+            <a href="https://santhosh-07-sandy.github.io/memory-game" target="_blank">
+              <i class="fa-solid fa-up-right-from-square"></i>
+            </a>
+          </div>
+        </div>
       </div>
       <a href="#" id="see-more-btn" class="btn">View More</a>
     </div>
@@ -225,7 +237,7 @@
 
   <!-- ===== FOOTER SECTION ===== -->
   <div class="copyright">
-    <p>&copy; 2025 Santhosh D. Made With <i class="fa-solid fa-heart"></i>. All Rights Reserved.</p>
+    <p>&copy; 2026 Santhosh D. Made With <i class="fa-solid fa-heart"></i>. All Rights Reserved.</p>
   </div>
 
   <!-- External JS -->
