--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               A ChatGPT-style GenAI web app built using React, Node.js, MongoDB, and OpenAI API.
               Features include chat history, token billing, authentication, and a clean UI.
             </p>
-            <a href="https://quick-gpt-bice.vercel.app/" target="_blank" rel="noopener noreferrer"><i
+            <a href="https://quick-gpt-santhosh.vercel.app" target="_blank" rel="noopener noreferrer"><i
                 class="fa-solid fa-up-right-from-square"></i></a>
           </div>
         </div>
