--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/fav.png" />
   <link rel="apple-touch-icon" href="images/fav.png" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicon/2.16.0/devicon.min.css"
-    integrity="sha512-BlFCHJWngPEHme4TwlEob6dPLfoNaQBTTISPwr4344nxR353w2vgGZ7GiSadbbeR20cJeeM0u1I2lAZuIZ1aOQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.16.0/devicon.min.css" />
   <script src="https://kit.fontawesome.com/3143154987.js" crossorigin="anonymous"></script>
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -224,6 +224,88 @@
       <a href="#" id="see-more-btn" class="btn">View More</a>
     </div>
   </section>
+  <!-- ===== TESTIMONIALS SECTION ===== -->
+  <section id="testimonials">
+    <div class="container">
+      <h1 class="sub-title">Testimonials</h1>
+
+
+      <div class="testimonial-tabs">
+        <button class="tab-btn active" data-target="client-reviews">Client Reviews</button>
+        <button class="tab-btn" data-target="student-reviews">Student Reviews</button>
+      </div>
+
+      <!-- Client Reviews (Dynamic) -->
+      <div class="testimonial-content active" id="client-reviews">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper" id="client-swiper-wrapper">
+            <!-- Dynamic slides injected here -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <div class="add-review-container">
+          <button id="toggle-client-form" class="btn btn2">Write a Client Review</button>
+          <form id="client-review-form" class="hidden">
+
+            <div class="form-group">
+              <input type="text" id="client-name" placeholder="Your Name" required>
+              <input type="text" id="client-role" placeholder="Your Role / Company" required>
+            </div>
+            <div class="form-group">
+              <select id="client-rating" required>
+                <option value="" disabled selected>Select Rating</option>
+                <option value="5">⭐⭐⭐⭐⭐ (Excellent)</option>
+                <option value="4">⭐⭐⭐⭐ (Good)</option>
+                <option value="3">⭐⭐⭐ (Average)</option>
+                <option value="2">⭐⭐ (Fair)</option>
+                <option value="1">⭐ (Poor)</option>
+              </select>
+            </div>
+            <textarea id="client-text" placeholder="Share your experience working with me... (Max 50 words)" rows="4"
+              required></textarea>
+            <button type="submit" class="btn">Submit Review</button>
+          </form>
+          <p id="client-msg"></p>
+        </div>
+      </div>
+
+      <!-- Student Reviews (Dynamic) -->
+      <div class="testimonial-content" id="student-reviews">
+        <div class="swiper studentSwiper">
+          <div class="swiper-wrapper" id="student-swiper-wrapper">
+            <!-- Dynamic slides injected here -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <div class="add-review-container">
+          <button id="toggle-review-form" class="btn btn2">Write a Review</button>
+          <form id="student-review-form" class="hidden">
+            <div class="form-group">
+              <input type="text" id="reviewer-name" placeholder="Your Name" required>
+              <input type="text" id="reviewer-institute" placeholder="College / Institute Name" required>
+            </div>
+            <div class="form-group">
+              <select id="reviewer-rating" required>
+                <option value="" disabled selected>Select Rating</option>
+                <option value="5">⭐⭐⭐⭐⭐ (Excellent)</option>
+                <option value="4">⭐⭐⭐⭐ (Good)</option>
+                <option value="3">⭐⭐⭐ (Average)</option>
+                <option value="2">⭐⭐ (Fair)</option>
+                <option value="1">⭐ (Poor)</option>
+              </select>
+            </div>
+            <textarea id="reviewer-text" placeholder="Share your learning experience..." rows="4" required></textarea>
+            <button type="submit" class="btn">Submit Review</button>
+          </form>
+          <p id="review-msg"></p>
+        </div>
+      </div>
+
+      <p class="trust-badge"><i class="fa-solid fa-shield-halved"></i> 100% Authentic Feedback</p>
+    </div>
+  </section>
   <!-- ===== CONTACT SECTION ===== -->
   <section id="contact">
     <div class="container">
@@ -259,6 +341,34 @@
     <p>&copy; 2026 Santhosh D. Made With <i class="fa-solid fa-heart"></i>. All Rights Reserved.</p>
   </footer>
 
+  <!-- Custom Notification (Toast) -->
+  <div id="custom-toast" class="toast hidden">
+    <div class="toast-content">
+      <i id="toast-icon"></i>
+      <div class="message">
+        <span id="toast-msg"></span>
+      </div>
+    </div>
+    <div class="toast-progress"></div>
+  </div>
+
+  <!-- Custom Confirmation Modal -->
+  <div id="custom-confirm" class="confirm-modal hidden">
+    <div class="confirm-content">
+      <div class="confirm-header">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        <h2>Confirm Delete</h2>
+      </div>
+      <p id="confirm-msg">Are you sure you want to delete this review?</p>
+      <div class="confirm-actions">
+        <button id="confirm-cancel" class="btn btn-cancel">Cancel</button>
+        <button id="confirm-yes" class="btn btn-delete">Delete</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- External JS -->
   <script src="script.js"></script>
 </body>
